# fw-ipsets

./: LICENSE  README.md  config.sample.toml  pyproject.toml
fw_ipsets/: config.py  fw-ipsets.py  handler.py
src/fw_ipsets/: config.py  fw_ipsets.py  handler.py
